--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@oclif/test": "^1.2.2",
     "chai": "^4.2.0",
     "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
     "eslint-config-oclif": "^3.1.0",
+    "eslint-plugin-import": "^2.7.0",
     "globby": "^8.0.1",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0"
@@ -57,7 +59,6 @@
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
-    "posttest": "eslint .",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
     "version": "oclif-dev readme && git add README.md"
