--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "@fancy-test/nock": "^0.1.1",
     "@oclif/dev-cli": "^1.19.4",
     "@oclif/test": "^1.2.2",
     "chai": "^4.2.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-import": "^2.7.0",
     "globby": "^8.0.1",
     "mocha": "^5.2.0",
+    "nock": "^10.0.1",
     "nyc": "^13.1.0"
   },
   "engines": {
