--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@oclif/dev-cli": "^1.19.4",
     "@oclif/test": "^1.2.2",
     "chai": "^4.2.0",
+    "chai-subset": "^1.6.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-oclif": "^3.1.0",
