--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.5.2",
     "chalk": "^2.4.1",
     "cli-table": "github:Automattic/cli-table#master",
+    "cli-ux": "^5.0.0",
     "inquirer": "^6.2.0",
     "jsonapi-serializer": "^3.6.2",
     "jsonwebtoken": "^8.3.0",
