[+] Copy Layout - Add feedback that the process has succeeded or failed (#3)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonapi-serializer": "^3.6.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "progress": "^2.0.3",
     "superagent": "^3.8.3",
     "superagent-promise": "^1.1.0",
     "winston": "^2.2.0"
