[-] Technical - Make packages version numbers exact

--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
   },
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
-    "@oclif/command": "^1.5.4",
-    "@oclif/config": "^1.8.8",
-    "@oclif/plugin-help": "^2.1.3",
-    "bluebird": "^3.5.2",
-    "chalk": "^2.4.1",
+    "@oclif/command": "1.5.4",
+    "@oclif/config": "1.8.8",
+    "@oclif/plugin-help": "2.1.3",
+    "bluebird": "3.5.2",
+    "chalk": "2.4.1",
     "cli-table": "github:Automattic/cli-table#master",
-    "inquirer": "^6.2.0",
-    "jsonapi-serializer": "^3.6.2",
-    "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.11",
-    "progress": "^2.0.3",
-    "superagent": "^3.8.3",
-    "superagent-promise": "^1.1.0",
-    "winston": "^2.2.0"
+    "inquirer": "6.2.0",
+    "jsonapi-serializer": "3.6.2",
+    "jsonwebtoken": "8.3.0",
+    "lodash": "4.17.11",
+    "progress": "2.0.3",
+    "superagent": "3.8.3",
+    "superagent-promise": "1.1.0",
+    "winston": "2.2.0"
   },
   "devDependencies": {
-    "@fancy-test/nock": "^0.1.1",
-    "@oclif/dev-cli": "^1.19.4",
-    "@oclif/test": "^1.2.2",
-    "chai": "^4.2.0",
-    "chai-subset": "^1.6.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-oclif": "^3.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "globby": "^8.0.1",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.1",
-    "nyc": "^13.1.0"
+    "@fancy-test/nock": "0.1.1",
+    "@oclif/dev-cli": "1.19.4",
+    "@oclif/test": "1.2.2",
+    "chai": "4.2.0",
+    "chai-subset": "1.6.0",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-config-oclif": "3.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "globby": "8.0.1",
+    "mocha": "5.2.0",
+    "nock": "10.0.1",
+    "nyc": "13.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
