--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
+    "@bugsnag/js": "5.2.0",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/plugin-help": "2.1.3",
