[-] Package - Rename the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toolbelt",
+  "name": "forest-cli",
   "description": "The Lumberjacks' toolbelt is the Forest CLI which makes easy to manage your back office application directly from the terminal.",
   "version": "1.0.0",
   "author": "Sandro Munda",
