--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@bugsnag/js": "5.2.0",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
+    "@oclif/errors": "1.2.2",
     "@oclif/plugin-help": "2.1.3",
     "bluebird": "3.5.2",
     "chalk": "2.4.1",
