--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/plugin-help": "2.1.3",
+    "@oclif/plugin-warn-if-update-available": "1.7.0",
     "bluebird": "3.5.2",
     "chalk": "2.4.1",
     "cli-table": "github:Automattic/cli-table#master",
@@ -67,7 +68,8 @@
     "commands": "./src/commands",
     "bin": "forest",
     "plugins": [
-      "@oclif/plugin-help"
+      "@oclif/plugin-help",
+      "@oclif/plugin-warn-if-update-available"
     ]
   },
   "repository": "ForestAdmin/toolbelt",
