--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "@oclif/test": "1.2.2",
     "chai": "4.2.0",
     "chai-subset": "1.6.0",
-    "eslint": "5.6.1",
-    "eslint-config-airbnb-base": "12.1.0",
+    "eslint": "6.7.2",
+    "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
-    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-import": "2.18.2",
     "globby": "8.0.1",
     "mocha": "5.2.0",
     "moment": "2.24.0",
@@ -75,6 +75,7 @@
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
     "build": "node ./bin/deploy.js",
+    "lint": "./node_modules/eslint/bin/eslint.js bin src test",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\" --exit",
