--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "14.3.1",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.3.0",
+    "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "progress": "2.0.3",
     "superagent": "3.8.3",
