--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "warn-if-update-available": {
       "timeoutInDays": 7,
       "message": "<%= config.name %> update available from <%= chalk.greenBright(config.version) %> to <%= chalk.greenBright(latest) %>.",
-      "registry": "https://www.npmjs.com/package/forest-cli",
-      "authorization": "Basic f9feb3a6-a76b-4bd0-ab2f-471e6e46cc56"
+      "registry": "https://www.npmjs.com/package/forest-cli"
     }
   },
   "repository": "ForestAdmin/toolbelt",
