[-] Authentication - Try to authent using the .lumberrc (#3mgbc3) (#21)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "inquirer": "6.2.0",
     "joi": "14.3.1",
     "jsonapi-serializer": "3.6.2",
-    "jsonwebtoken": "8.3.0",
+    "jsonwebtoken": "8.5.1",
+    "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "progress": "2.0.3",
     "superagent": "3.8.3",
@@ -42,6 +43,7 @@
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
     "eslint-plugin-import": "2.18.2",
+    "fs-extra": "8.1.0",
     "globby": "8.0.1",
     "mocha": "5.2.0",
     "moment": "2.24.0",
