--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "3.5.2",
     "chalk": "2.4.1",
     "cli-table": "github:Automattic/cli-table#master",
+    "dotenv": "8.2.0",
     "git-hooks": "1.1.10",
     "inquirer": "6.2.0",
     "joi": "14.3.1",
