--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fs-extra": "8.1.0",
     "globby": "8.0.1",
     "mocha": "5.2.0",
+    "mock-stdin": "1.0.0",
     "moment": "2.24.0",
     "nock": "10.0.1",
     "nyc": "13.1.0",
