--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "winston": "2.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
     "@fancy-test/nock": "0.1.1",
     "@oclif/dev-cli": "1.19.4",
     "@oclif/test": "1.2.2",
@@ -49,6 +51,7 @@
     "eslint-plugin-sonarjs": "0.5.0",
     "fs-extra": "8.1.0",
     "globby": "8.0.1",
+    "husky": "4.2.4",
     "mocha": "5.2.0",
     "mock-stdin": "1.0.0",
     "moment": "2.24.0",
