--- a/package.json
+++ b/package.json
@@ -41,20 +41,16 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@commitlint/travis-cli": "8.3.5",
-    "@fancy-test/nock": "0.1.1",
-    "@oclif/dev-cli": "1.19.4",
-    "@oclif/test": "1.2.2",
-    "chai": "4.2.0",
-    "chai-subset": "1.6.0",
     "eslint": "6.7.2",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-sonarjs": "0.5.0",
+    "eslint-plugin-jest": "23.3.0",
     "fs-extra": "8.1.0",
     "globby": "8.0.1",
+    "jest": "24.9.0",
     "husky": "4.2.4",
-    "mocha": "5.2.0",
     "mock-stdin": "1.0.0",
     "moment": "2.24.0",
     "nock": "12.0.3",
@@ -97,7 +93,9 @@
     "lint": "./node_modules/eslint/bin/eslint.js bin src test",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest && oclif-dev readme",
-    "test": "nyc mocha --forbid-only \"test/**/*.test.js\" --exit",
+    "readme:update-coverage": "yarn test:coverage && node ./scripts/update-coverage.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "version": "oclif-dev readme && git add README.md"
   }
 }
