--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "progress": "2.0.3",
+    "spinnies": "0.5.1",
     "stdout-stderr": "0.1.13",
     "superagent": "3.8.3",
-    "superagent-promise": "1.1.0",
-    "winston": "2.2.0"
+    "superagent-promise": "1.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -45,12 +45,12 @@
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-sonarjs": "0.5.0",
     "eslint-plugin-jest": "23.3.0",
+    "eslint-plugin-sonarjs": "0.5.0",
     "fs-extra": "8.1.0",
     "globby": "8.0.1",
-    "jest": "24.9.0",
     "husky": "4.2.4",
+    "jest": "24.9.0",
     "mock-stdin": "1.0.0",
     "moment": "2.24.0",
     "nock": "12.0.3",
