--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "lodash": "4.17.15",
     "progress": "2.0.3",
     "spinnies": "0.5.1",
-    "superagent": "3.8.3",
-    "superagent-promise": "1.1.0",
     "uuid": "8.0.0",
-    "winston": "2.2.0"
+    "stdout-stderr": "0.1.13",
+    "superagent": "3.8.3",
+    "superagent-promise": "1.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -51,6 +51,7 @@
     "eslint-plugin-jest": "23.3.0",
     "eslint-plugin-sonarjs": "0.5.0",
     "fs-extra": "8.1.0",
+    "globby": "8.0.1",
     "husky": "4.2.4",
     "jest": "24.9.0",
     "mock-stdin": "1.0.0",
