--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@forestadmin/devops": "2.0.1",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
+    "@oclif/errors": "1.2.2",
     "@oclif/plugin-help": "2.1.3",
     "@oclif/plugin-not-found": "1.2.3",
     "@oclif/plugin-warn-if-update-available": "1.7.0",
