--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
-    "@forestadmin/devops": "2.0.1",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/errors": "1.2.2",
@@ -33,7 +32,6 @@
     "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "progress": "2.0.3",
-    "stdout-stderr": "0.1.13",
     "superagent": "3.8.3",
     "superagent-promise": "1.1.0",
     "winston": "2.2.0"
@@ -42,6 +40,7 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@commitlint/travis-cli": "8.3.5",
+    "@forestadmin/devops": "2.0.1",
     "eslint": "6.7.2",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
@@ -57,7 +56,8 @@
     "nock": "12.0.3",
     "nyc": "13.1.0",
     "semver": "5.6.0",
-    "simple-git": "1.65.0"
+    "simple-git": "1.65.0",
+    "stdout-stderr": "0.1.13"
   },
   "engines": {
     "node": ">=8.0.0"
