--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@commitlint/config-conventional": "8.3.4",
     "@commitlint/travis-cli": "8.3.5",
     "@forestadmin/devops": "2.0.1",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.0",
     "eslint": "6.7.2",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
@@ -51,6 +53,8 @@
     "jest": "24.9.0",
     "mock-stdin": "1.0.0",
     "nock": "12.0.3",
+    "semantic-release": "17.0.7",
+    "semantic-release-slack-bot": "1.6.2",
     "simple-git": "1.65.0",
     "stdout-stderr": "0.1.13"
   },
@@ -85,8 +89,7 @@
   },
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
-    "build": "node ./bin/deploy.js",
-    "lint": "./node_modules/eslint/bin/eslint.js bin src test",
+    "lint": "./node_modules/eslint/bin/eslint.js src test",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "readme:update-coverage": "yarn test:coverage && node ./scripts/update-coverage.js",
