--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "progress": "2.0.3",
+    "spinnies": "0.5.1",
     "superagent": "3.8.3",
     "superagent-promise": "1.1.0",
+    "uuid": "8.0.0",
     "winston": "2.2.0"
   },
   "devDependencies": {
