chore(ci): fix ci publish removing useless postpack/prepack

--- a/package.json
+++ b/package.json
@@ -92,11 +92,8 @@
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js src test",
-    "postpack": "rm -f oclif.manifest.json",
-    "prepack": "oclif-dev manifest && oclif-dev readme",
     "readme:update-coverage": "yarn test:coverage && node ./scripts/update-coverage.js",
     "test": "jest",
-    "test:coverage": "jest --coverage",
-    "version": "oclif-dev readme && git add README.md"
+    "test:coverage": "jest --coverage"
   }
 }
