--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "spinnies": "0.5.1",
     "superagent": "3.8.3",
     "superagent-promise": "1.1.0",
-    "uuid": "8.0.0",
-    "winston": "2.2.0"
+    "uuid": "8.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
