--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@commitlint/config-conventional": "8.3.4",
     "@commitlint/travis-cli": "8.3.5",
     "@forestadmin/devops": "2.0.1",
+    "@oclif/dev-cli": "1.22.2",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "eslint": "6.7.2",
