--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "Arnaud Valensi <arnaud.valensi@gmail.com>",
     "Vincent Molinié <molinie.vincent@gmail.com>",
     "David Routhieau <rootio@protonmail.com>",
-    "Arnaud Besnier <arnaudibesnier@gmail.com>"
+    "Arnaud Besnier <arnaudibesnier@gmail.com>",
+    "Guillaume Gautreau <guillaume@ghusse.com>"
   ],
   "bin": {
     "forest": "./bin/run"
