--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@oclif/dev-cli": "1.22.2",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
+    "@types/jest": "26.0.18",
     "eslint": "6.7.2",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
