--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
   lint:
     name: Linting
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]') || github.event_name == 'pull_request'"
+    if: "!contains(github.event.head_commit.message, '[skip ci]') || github.event.pull_request"
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@master
