--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: [lint]
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(github.event.head_commit.message, '[skip ci]') || github.event_name == 'pull_request'"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
