--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
+    "@forestadmin/context": "1.1.0",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/errors": "1.2.2",
