--- a/package.json
+++ b/package.json
@@ -22,36 +22,37 @@
     "@oclif/plugin-help": "2.1.3",
     "@oclif/plugin-not-found": "1.2.4",
     "@oclif/plugin-warn-if-update-available": "1.7.0",
+    "app-root-path": "3.0.0",
+    "atob": "^2.1.2",
     "bluebird": "3.5.2",
     "chalk": "4.0.0",
     "cli-table": "github:Automattic/cli-table#7b14232ba779929e1859b267bf753c150d90a618",
     "clipboardy": "2.3.0",
+    "commander": "^2.9.0",
     "dotenv": "8.2.0",
+    "handlebars": "4.7.6",
     "inquirer": "^6.2.0",
     "joi": "14.3.1",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "2.2.0",
     "lodash": "4.17.19",
-    "openid-client": "^4.2.2",
-    "progress": "2.0.3",
-    "spinnies": "0.5.1",
-    "superagent-promise": "1.1.0",
-    "uuid": "8.0.0",
-    "stdout-stderr": "0.1.13",
-    "atob": "^2.1.2",
-    "commander": "^2.9.0",
-    "handlebars": "4.7.6",
     "mkdirp": "^1.0.4",
     "mongodb": "3.6.3",
     "mysql2": "2.2.5",
     "open": "^7.3.0",
+    "openid-client": "^4.2.2",
     "pg": "8.2.1",
     "pluralize": "^8.0.0",
+    "progress": "2.0.3",
     "saslprep": "1.0.3",
     "sequelize": "5.22.0",
+    "spinnies": "0.5.1",
+    "stdout-stderr": "0.1.13",
     "superagent": "5.1.0",
+    "superagent-promise": "1.1.0",
     "tedious": "6.4.0",
+    "uuid": "8.0.0",
     "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
@@ -68,14 +69,14 @@
     "eslint-plugin-jest": "23.3.0",
     "eslint-plugin-sonarjs": "0.5.0",
     "fs-extra": "8.1.0",
+    "git-hooks": "1.1.10",
     "husky": "4.2.4",
+    "jest": "26.6.3",
     "mock-stdin": "1.0.0",
     "nock": "13.0.4",
+    "rimraf": "3.0.0",
     "semantic-release": "17.4.2",
     "semantic-release-slack-bot": "1.6.2",
-    "git-hooks": "1.1.10",
-    "jest": "26.6.3",
-    "rimraf": "3.0.0",
     "simple-git": "1.126.0",
     "sinon": "7.5.0"
   },
