--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "clipboardy": "2.3.0",
     "commander": "^2.9.0",
     "dotenv": "8.2.0",
-    "handlebars": "4.7.6",
+    "handlebars": "4.7.7",
     "inquirer": "^6.2.0",
     "joi": "14.3.1",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "2.2.0",
     "lodash": "4.17.19",
-    "mkdirp": "^1.0.4",
+    "mkdirp": "1.0.4",
     "mongodb": "3.6.3",
     "mysql2": "2.2.5",
     "open": "^7.3.0",
