--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
   },
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
-    "lint": "./node_modules/eslint/bin/eslint.js ./*.js deserializers serializers test",
+    "lint": "./node_modules/eslint/bin/eslint.js ./*.js src test",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest",
     "test": "jest --runInBand",
