chore: use fixed version

--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@oclif/plugin-not-found": "1.2.4",
     "@oclif/plugin-warn-if-update-available": "1.7.0",
     "app-root-path": "3.0.0",
-    "atob": "^2.1.2",
+    "atob": "2.1.2",
     "bluebird": "3.5.2",
     "chalk": "4.0.0",
     "cli-table": "0.3.6",
     "clipboardy": "2.3.0",
-    "commander": "^2.9.0",
+    "commander": "2.9.0",
     "dotenv": "8.2.0",
     "handlebars": "4.7.7",
-    "inquirer": "^6.2.0",
+    "inquirer": "6.2.0",
     "joi": "14.3.1",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.5.1",
@@ -40,10 +40,10 @@
     "mkdirp": "1.0.4",
     "mongodb": "3.6.3",
     "mysql2": "2.2.5",
-    "open": "^7.3.0",
-    "openid-client": "^4.2.2",
+    "open": "7.3.0",
+    "openid-client": "4.2.2",
     "pg": "8.2.1",
-    "pluralize": "^8.0.0",
+    "pluralize": "8.0.0",
     "progress": "2.0.3",
     "saslprep": "1.0.3",
     "sequelize": "5.22.0",
