--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "rimraf": "3.0.0",
     "semantic-release": "17.4.2",
     "semantic-release-slack-bot": "1.6.2",
-    "simple-git": "1.126.0",
-    "sinon": "7.5.0"
+    "simple-git": "1.126.0"
   },
   "engines": {
     "node": ">=8.0.0"
