--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -12,8 +12,8 @@ jobs:
   call-build-workflow:
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml
+      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
   call-test-workflow:
     steps:
-      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml
+      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
 #     - uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
