chore(gha): callable workflow must be reference at job top level

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -11,9 +11,7 @@ permissions:
 jobs:
   call-build-workflow:
     if: ${{ github.actor == 'dependabot[bot]' }}
-    steps:
-      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
+    uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
   call-test-workflow:
-    steps:
-      - uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
+    uses: ForestAdmin/toolbelt/.github/workflows/test.yml@chore/prevent-action-on-dependabot
 #     - uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
