--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,8 +1,15 @@
 name: Dispatch workflow 
 on:
   pull_request:
+    branches-ignore:
+      - 'dependabot/**'
   pull_request_target:
+    branches:
+      - 'dependabot/**'
   workflow_dispatch:
+
+permissions:
+
 
 jobs:
   dispatch:
