--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,24 +1,21 @@
 name: Dispatch workflow 
 on:
-  pull_request:
-    branches-ignore:
-      - 'dependabot/**'
   pull_request_target:
-    branches:
-      - 'dependabot/**'
   workflow_dispatch:
 
 permissions: read-all
 
 jobs:
   get-team:
-    if: github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     outputs:
-      output: ${{ steps.get_devs.outputs.data }}
+      developers: |
+        ${{ (github.actor != 'dependabot[bot]' && fromJSON(steps.get_devs.outputs.data).*.login) || 
+        steps.get_dependabot.outputs.data }}
     steps:
-      - uses: octokit/request-action@v2.x
-        id: get_devs
+      - id: get_devs
+        if: github.actor != 'dependabot[bot]'
+        uses: octokit/request-action@v2.x
         with:
           route: GET /orgs/{org}/teams/{team_slug}/members
           org: ForestAdmin
@@ -27,18 +24,20 @@ jobs:
           per_page: 50
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      - run: "echo ${{ contains(fromJSON(steps.get_devs.outputs.data).*.login, github.actor) }}"
-  # dispatch:
-  #   needs: ['get-team']
-  #   if: |
-  #     echo ${{needs.get-team.outputs.output}}
-  #     contains('|ram|venkat|dependabot[bot]|', format('|{0}|', github.actor))
-  #     (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]') || 
-  #     (github.event_name == 'pull_request' && github.actor != 'dependabot[bot]') || 
-  #     github.event_name == 'workflow_dispatch'
-  #   name: Dispatch event ${{ github.event_name }} from ${{ github.actor }}
-  #   uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
-  #   secrets:
-  #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  #     CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      - id: get_dependabot
+        if: github.actor == 'dependabot[bot]'
+        run: echo "::set-output name=data::dependabot[bot]"
+
+  dispatch:
+    name: Dispatch event ${{ github.event_name }} from ${{ github.actor }}
+    needs: ['get-team']
+    if: |
+      success() && (
+        contains(needs.get-team.outputs.developers, github.actor) ||
+        github.event_name == 'workflow_dispatch'
+      )
+    # uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
+    # secrets:
+    #   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    #   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    #   CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
