--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,5 +1,8 @@
 name: Dispatch workflow 
 on:
+  pull_request:
+    branches-ignore:
+      - 'dependabot/**'
   pull_request_target:
   workflow_dispatch:
 
