--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -39,8 +39,8 @@ jobs:
         contains(needs.get-team.outputs.developers, github.actor) ||
         github.event_name == 'workflow_dispatch'
       )
-    # uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
-    # secrets:
-    #   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-    #   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-    #   CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+    uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
+    secrets:
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
