--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,8 +1,5 @@
 name: Dispatch workflow 
 on:
-  pull_request:
-    branches-ignore:
-      - 'dependabot/**'
   pull_request_target:
   workflow_dispatch:
 
@@ -30,17 +27,28 @@ jobs:
       - id: get_dependabot
         if: github.actor == 'dependabot[bot]'
         run: echo "::set-output name=data::dependabot[bot]"
-
-  dispatch:
-    name: Dispatch event ${{ github.event_name }} from ${{ github.actor }}
+  
+  print:
     needs: ['get-team']
-    if: |
-      success() && (
-        contains(needs.get-team.outputs.developers, github.actor) ||
-        github.event_name == 'workflow_dispatch'
-      )
-    uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
-    secrets:
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+    runs-on: ubuntu-latest
+    steps:
+      - id: get_dependabot
+        if: github.actor == 'dependabot[bot]'
+        run: |
+          echo ${{ needs.get-team.outputs.developers }}
+          echo ${{ contains(needs.get-team.outputs.developers, github.actor) }}
+          echo ${{ success() && (contains(needs.get-team.outputs.developers, github.actor) || github.event_name == 'workflow_dispatch') }}
+
+  # dispatch:
+  #   name: Dispatch event ${{ github.event_name }} from ${{ github.actor }}
+  #   needs: ['get-team']
+  #   if: |
+  #     success() && (
+  #       contains(needs.get-team.outputs.developers, github.actor) ||
+  #       github.event_name == 'workflow_dispatch'
+  #     )
+  #   uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
+  #   secrets:
+  #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  #     CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
