--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
       - beta
+  workflow_run:
+    workflows: ["Dispatch workflow"]
+    types: [completed]
   workflow_call:
     secrets:
       DOCKER_PASSWORD:
@@ -17,7 +20,9 @@ jobs:
   lint:
     name: Linting
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: |
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
+      !contains(github.event.head_commit.message, '[skip ci]')
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@master
@@ -48,7 +53,9 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: [lint]
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: |
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
+      !contains(github.event.head_commit.message, '[skip ci]')
     strategy:
       matrix:
         node: ['10', '14']
