--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,6 @@ on:
     branches:
       - main
       - beta
-  workflow_run:
-    workflows: ["Dispatch workflow"]
-    types: [completed]
   workflow_call:
     secrets:
       DOCKER_PASSWORD:
@@ -20,9 +17,7 @@ jobs:
   lint:
     name: Linting
     runs-on: ubuntu-latest
-    if: |
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
-      !contains(github.event.head_commit.message, '[skip ci]')
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@master
@@ -53,9 +48,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: [lint]
-    if: |
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
-      !contains(github.event.head_commit.message, '[skip ci]')
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     strategy:
       matrix:
         node: ['10', '14']
