chore: revert all changes in CI workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,11 @@
 name: Build, Test and Deploy
+
 on:
   push:
     branches:
       - main
       - beta
-  workflow_call:
-    secrets:
-      DOCKER_PASSWORD:
-        required: true
-      DOCKER_USERNAME:
-        required: true
-      CC_TEST_REPORTER_ID:
-        required: true
+  pull_request:
 
 jobs:
   lint:
@@ -22,14 +16,8 @@ jobs:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@master
       - uses: actions/checkout@v2
-        if: github.event_name != 'pull_request_target'
         with:
           fetch-depth: 0
-      - uses: actions/checkout@v2
-        if: github.event_name == 'pull_request_target'
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-node@v1
         with:
             node-version: 14.17.6
@@ -57,11 +45,6 @@ jobs:
             withCoverage: ${{ true }}
     steps:
       - uses: actions/checkout@v2
-        if: github.event_name != 'pull_request_target'
-      - uses: actions/checkout@v2
-        if: github.event_name == 'pull_request_target'
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
