--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Testing
+name: Build and Test
 
 on:
   push:
@@ -40,7 +40,7 @@ jobs:
 
   preflight:
     runs-on: ubuntu-latest
-    needs: ["get-team"]
+    needs: [get-team]
     steps:
       - if: |
           success() && contains(needs.get-team.outputs.developers, github.actor) && (
@@ -54,13 +54,13 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    needs: ["preflight"]
+    needs: [preflight]
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@f75dd6564bb646f95277dc8c3b80612e46a4a1ea
       - uses: actions/checkout@v2.x
         with:
-          ref: ""
+          ref: ${{ env.CHECKOUT_REF }}
           fetch-depth: 0
       - uses: actions/setup-node@v2.x
         with:
@@ -82,14 +82,14 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        node: ["10", "14"]
+        node: [10, 14]
         include:
-          - node: "14"
+          - node: 14
             withCoverage: ${{ true }}
     steps:
       - uses: actions/checkout@v2.x
         with:
-          ref: ""
+          ref: ${{ env.CHECKOUT_REF }}
       - uses: actions/setup-node@v2.x
         with:
           node-version: ${{ matrix.node }}
@@ -103,11 +103,11 @@ jobs:
       - name: Start docker container
         run: docker-compose up -d; sleep 15
       - name: Test with Node ${{ matrix.node }}
-        if: "!matrix.withCoverage"
+        if: ${{ !matrix.withCoverage }}
         run: yarn test
       - name: Test with Node ${{ matrix.node }} & Send coverage
         uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
-        if: matrix.withCoverage && matrix.node == '14'
+        if: matrix.withCoverage && matrix.node == 14
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
