--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,58 +3,22 @@ name: Build and Test
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
-  workflow_run:
-    types:
-      - "completed"
-    workflows:
-      - "Pull-request preflight"
+  workflow_call:
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
+      CC_TEST_REPORTER_ID:
+        required: true
 
 env:
-  CHECKOUT_REF: |
-    ${{ 
-      (github.event_name == 'workflow_run' && github.event.workflow_run.event == 'pull_request' 
-        && github.event.workflow_run.head_sha) ||
-      github.sha
-    }}
+  CHECKOUT_REF: ${{ github.event.pull_request.head.sha || github.sha }}
 
 jobs:
-  get-team:
-    runs-on: ubuntu-latest
-    outputs:
-      developers: |
-        ${{ (github.actor != 'dependabot[bot]' && fromJSON(steps.get_devs.outputs.data).*.login) || 
-        'dependabot[bot]' }}
-    steps:
-      - id: get_devs
-        if: github.actor != 'dependabot[bot]'
-        uses: octokit/request-action@v7e93b91076fad3920c29d44eb2a6311d929db3dd
-        with:
-          route: GET /orgs/{org}/teams/{team_slug}/members
-          org: ForestAdmin
-          team_slug: Developers
-          role: all
-          per_page: 50
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
-  preflight:
-    runs-on: ubuntu-latest
-    needs: [get-team]
-    steps:
-      - if: |
-          success() && contains(needs.get-team.outputs.developers, github.actor) && (
-            github.event_name == 'workflow_dispatch' ||
-            github.event_name == 'push' && github.ref == 'refs/heads/main' ||
-            github.event_name == 'workflow_run'
-          )
-        run: exit 0
-      - run: exit 1
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    needs: [preflight]
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@f75dd6564bb646f95277dc8c3b80612e46a4a1ea
